Changed counter implementation Rewrote getTemplate function

--- a/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.html
@@ -222,7 +222,7 @@
     <div class="results-wrapper">
       <p>Lesson finished</p>
       <p>Correct answers:</p>
-      <p>{{correctAndTotalExercises()[0]}} out of {{correctAndTotalExercises()[1]}}</p>
+      <p>{{counters().correctAnswers}} out of {{counters().totalExercises}}</p>
       <p>Experience points earned:</p>
       <p>50 XP</p>
     </div>
