--- a/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.scss
@@ -3,7 +3,8 @@
   justify-items: center;
   min-height: 100dvh;
   font-family: Poppins, sans-serif;
-  color: var(--primary-clr)
+  color: var(--primary-clr);
+  --t: 1.6rem; // standard text size
 }
 
 .wrapper {
@@ -17,12 +18,21 @@
 }
 
 .exercise-content-wrapper {
-  font-size: 1.6rem;
+  font-size: var(--t);
 }
 
-.input-field {
+.translation-wrapper {
+  font-size: var(--t);
+}
+
+.results-wrapper {
+  font-size: 2.6rem;
+}
+
+// FillInTheBlank
+.fill-in-the-blank-input-field {
   font-family: Poppins, sans-serif;
-  font-size: 1.6rem;
+  font-size: var(--t);
   background: none;
   border: none;
 
@@ -32,9 +42,10 @@
   }
 }
 
+// TranslateTheSentence
 .sentence-input-area {
   padding: 5px;
-  font-size: 1.6rem;
+  font-size: var(--t);
   font-family: Poppins, sans-serif;
   border-color: var(--gray-700);
   border-radius: 15px;
@@ -44,46 +55,38 @@
   max-width: 70vw;
 }
 
-translation-wrapper {
-  font-size: 18px;
+// CompleteTheConversation
+.chat-wrapper {
+  font-size: var(--t);
 }
 
 .chat-input-field {
   padding: 5px;
-  font-size: 1.6rem;
+  font-size: var(--t);
   font-family: Poppins, sans-serif;
   border-color: transparent;
   border-width: 0;
   resize: none;
   text-wrap: wrap;
   overflow: auto;
+  background-color: transparent;
+  color: white;
 
   &:focus {
     outline: none;
   }
 }
 
-.chat-wrapper {
-  font-size: 1.6rem;
-}
-
-
-.chat-input-field {
-  background-color: transparent;
-  color: white;
-}
-
 .bubble {
-  --r: 1em;  /* the radius */
-  --t: 1.5em; /* the size of the tail */
+  --radius: 1em;  /* the radius */
+  --tailSize: 1.5em; /* the size of the tail */
 
-  //max-width: 300px;
   padding: 1em;
-  border-inline: var(--t) solid #0000;
-  border-radius: calc(var(--r) + var(--t))/var(--r);
+  border-inline: var(--tailSize) solid #0000;
+  border-radius: calc(var(--radius) + var(--tailSize))/var(--radius);
   mask:
     radial-gradient(100% 100% at var(--_p) 0,#0000 99%,#000 102%)
-    var(--_p) 100%/var(--t) var(--t) no-repeat,
+    var(--_p) 100%/var(--tailSize) var(--tailSize) no-repeat,
     linear-gradient(#000, #000) padding-box;
   color: #fff;
 }
@@ -100,6 +103,44 @@ translation-wrapper {
   background: var(--blue-500);
 }
 
+// MatchTheCategory
+.match-the-category-wrapper {
+  font-size: var(--t);
+  height: 40rem;
+
+  & .drop-column {
+    border: 4px solid var(--blue-400);
+    border-radius: 15px;
+  }
+
+  & li {
+    color: var(--primary-clr);
+    border: 1px solid var(--blue-400);
+
+    &:hover {
+      background: var(--blue-300);
+      transition: background 0.25s ease;
+
+      cursor: grab;
+    }
+    &:active {
+      background: var(--blue-400);
+      transition: background 0.25s ease;
+
+      cursor: grabbing;
+    }
+  }
+}
+
+.p-draggable-enter {
+  border: 2px solid var(--blue-400);
+  border-radius: 15px;
+  background: var(--blue-100);
+  transition: background 0.25s ease;
+}
+
+
+// Button customization
 ::ng-deep .buttons-group {
   transition: all 0.25s ease;
 
@@ -119,23 +160,29 @@ translation-wrapper {
       width: 300px;
     }
   }
+  & .btn-disabled {
+    pointer-events: none;
+  }
+
+  & .btn-correct,
+  & .btn-incorrect,
+  & .btn-actual-correct {
+    @extend .btn-disabled;
+  }
 
   & .btn-correct {
     background: var(--accent-text-clr);
     border-color: var(--accent-text-clr);
-    pointer-events: none;
   }
 
   & .btn-incorrect {
     background: var(--secondary-text-clr);
     border-color: var(--secondary-text-clr);
-    pointer-events: none;
   }
 
   & .btn-actual-correct {
     background: var(--yellow-400);
     border-color: var(--yellow-400);
-    pointer-events: none;
   }
 
   & .btn-selected {
@@ -144,26 +191,6 @@ translation-wrapper {
   }
 }
 
-.results-wrapper {
-  text-align: center;
-  font-size: 2.6rem;
-}
 
-.match-the-category-wrapper {
-  & li {
-    text-align: center;
-    &:hover {
-      cursor: grab;
-    }
-    &:active {
-      cursor: grabbing;
-    }
-  }
-}
 
-.p-draggable-enter {
-  border: 2px solid var(--blue-400);
-  border-radius: 15px;
-  background: var(--blue-100);
-  transition: background 0.25s ease;
-}
+
