Rewrote learn component structure Fixed word toggling in ReorderSentence exercise

--- a/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.html
@@ -1,337 +1,3 @@
-<!-- TEMPLATES -->
-
-  <!-- FILL IN THE BLANK -->
-  <ng-template #fillInTheBlank>
-    <div class="exercise-content-wrapper flex justify-content-start gap-3 mb-2">
-      <p>{{exerciseData().question}} </p>
-      <input
-        #inputField
-        class="fill-in-the-blank-input-field flex-grow-1 flex-wrap"
-        autofocus
-        type="text"
-        id="inputForm"
-        title="Input Field"
-        [value]="isDone() ? exerciseData().answer : ''"
-        (blur)="!isDone() ? utilHtml.forceFocus(inputFieldRef) : ''"
-        (keyup.enter)="inputForm.value ?
-                       setExerciseResult(vrf.verifyAnswer(inputForm.value,exerciseData))
-                       : ''"
-        [formControl]="inputForm"/>
-    </div>
-
-    <div class="buttons-group p-fluid grid-12 gap-2 mb-3">
-      @for (choice of exerciseData().choices; track choice) {
-        <div class="col-12">
-          <p-button
-            [styleClass]="
-            isDone() ? (
-              utilHtml.elemContainsAnswer(choice, exerciseData) ? ( isCorrectAnswer() ? 'btn-correct' : 'btn-actual-correct' )
-              :
-              'btn-incorrect'
-            ) : ''
-            "
-
-            id="{{choice}}"
-            label="{{choice}}"
-            [raised]="true"
-            severity="secondary"
-            (onClick)="setExerciseResult(vrf.verifyAnswer(choice,exerciseData))"/>
-        </div>
-      }
-    </div>
-  </ng-template>
-
-  <!-- TRANSLATE THE WORD -->
-  <ng-template #translateWord>
-    <div class="exercise-content-wrapper flex justify-content-center gap-3 mb-2">
-      <p style="font-size: 36px">{{exerciseData().question}} </p>
-    </div>
-
-    <div class="buttons-group p-fluid grid-12 gap-2 mb-3">
-      @for (choice of exerciseData().choices; track choice) {
-        <div class="col-12">
-          <p-button
-            [styleClass]="
-            isDone() ? (
-              utilHtml.elemContainsAnswer(choice, exerciseData) ? ( isCorrectAnswer() ? 'btn-correct' : 'btn-actual-correct' )
-              :
-              'btn-incorrect'
-            ) : ''
-            "
-            id="{{choice}}"
-            label="{{choice}}"
-            [raised]="true"
-            severity="secondary"
-            (onClick)="setExerciseResult(vrf.verifyAnswer(choice,exerciseData))"/>
-        </div>
-      }
-    </div>
-  </ng-template>
-
-  <!--  TRANSLATE THE SENTENCE -->
-  <ng-template #translateTheSentence>
-    <div class="exercise-content-wrapper flex justify-content-center">
-      <p>{{exerciseData().question}}</p>
-    </div>
-    <div class="flex justify-content-center mb-2">
-      <textarea
-        [dir]="utilHtml.langDirection(exerciseData)"
-        autofocus
-        class="sentence-input-area flex-grow-1 flex-wrap"
-        [readOnly]="isDone()"
-        id="sentenceInputForm"
-        title="Input Field"
-        [formControl]="inputForm"
-        rows="3"
-        cols="30"
-        >
-      </textarea>
-    </div>
-    <div class="buttons-group write-sentence-submit-btn flex justify-content-center">
-      @if (!isDone()) {
-        <p-button
-          id="writSentenceSubmitBtn"
-          label="Submit"
-          severity="primary"
-          (onClick)="inputForm.value ?
-          setExerciseResult(vrf.verifyAnswer(inputForm.value,exerciseData)) : null"/>
-      }
-    </div>
-
-    @if (isDone()) {
-      <div class="translation-wrapper flex justify-content-center flex-column text-center ">
-          <p><b>Translation:</b></p>
-          <p>{{exerciseData().question}} means:</p>
-          <p>{{exerciseData().answer}}</p>
-      </div>
-    }
-
-  </ng-template>
-
-  <!--  COMPLETE THE CONVERSATION -->
-  <ng-template #completeTheConversation>
-    <!--    Chat bubbles-->
-    <div class="chat-wrapper flex flex-column  mb-4">
-      <div class="bubble left  justify-content-start">
-        {{exerciseData().question}}
-      </div>
-
-        <div class="bubble right justify-content-end">
-          <input
-            [dir]="utilHtml.langDirection(exerciseData)"
-            class="chat-input-field flex-grow-1 flex-wrap"
-            [readOnly]="isDone()"
-            id="chatInputForm"
-            title="Input Field"
-            [value]="isDone() ? exerciseData().answer : ''"
-            [formControl]="inputForm"
-            (keyup.enter)="inputForm.value ?
-            setExerciseResult(vrf.verifyAnswer(inputForm.value,exerciseData)) : null"
-          />
-        </div>
-    </div>
-
-    <!--  answer choices  -->
-    <div class="buttons-group p-fluid grid-12 gap-2 mb-2">
-      @for (choice of exerciseData().choices; track choice) {
-        <div class="col-12">
-          <p-button
-            [dir]="utilHtml.langDirection(exerciseData)"
-            [styleClass]="
-            isDone() ? (
-              utilHtml.elemContainsAnswer(choice, exerciseData) ? ( isCorrectAnswer() ? 'btn-correct' : 'btn-actual-correct' )
-              :
-              'btn-incorrect'
-            ) : ''
-            "
-            id="{{choice}}"
-            label="{{choice}}"
-            [raised]="true"
-            severity="secondary"
-            (onClick)="setExerciseResult(vrf.verifyAnswer(choice,exerciseData))"/>
-        </div>
-      }
-    </div>
-
-    @if (isDone()) {
-      <div class="translation-wrapper flex justify-content-center">
-        <p><b>Translation:</b> {{exerciseData().translation}}</p>
-      </div>
-    }
-  </ng-template>
-
-  <!-- MATCH THE WORDS -->
-  <ng-template #matchTheWords>
-    <div class="buttons-group p-fluid grid mb-3">
-      @for (pair of exerciseData().randomizedPairs; track pair; let idx = $index) {
-        <div class="col-5 btn-matching-pairs">
-          <p-button
-            [styleClass]="
-            matchResults()[idx][0] ? 'btn-correct'
-            :
-            chosenPair()[0] === pair[0] ? 'btn-selected' : ''"
-            id="{{pair[0]}}"
-            label="{{pair[0]}}"
-            [raised]="true"
-            severity="secondary"
-            (onClick)="!isDone() ? chooseMatch(pair[0], 0) : null"/>
-        </div>
-        <div class="col-5 col-offset-2 btn-matching-pairs">
-          <p-button
-            [styleClass]="
-            matchResults()[idx][1] ? 'btn-correct'
-            :
-            chosenPair()[1] === pair[1] ? 'btn-selected' : ''"
-            id="{{pair[1]}}"
-            label="{{pair[1]}}"
-            [raised]="true"
-            severity="secondary"
-            (onClick)="!isDone() ? chooseMatch(pair[1], 1) : null"/>
-        </div>
-      }
-    </div>
-
-    @if (isDone() && counters().matchMistakes) {
-      <div class="flex flex-column text-center justify-content-center">
-        <p>Total incorrect matches: {{counters().matchMistakes}}</p>
-      </div>
-    }
-  </ng-template>
-
-  <!-- REORDER THE SENTENCE  -->
-  <ng-template  #reorderSentence>
-    <div class="buttons-group h-5rem gap-2 flex justify-content-center mb-4" [dir]="utilHtml.langDirection(exerciseData)">
-      <!--   Chosen words   -->
-      @for (word of chosenWords(); track word; let idx = $index) {
-          <p-button
-            class=""
-            [styleClass]="
-              isDone() ? (isCorrectAnswer() ? 'btn-correct' : 'btn-incorrect') : '' "
-            id="{{word}}"
-            label="{{word}}"
-            [raised]="true"
-            severity="secondary"
-            (onClick)="toggleWordSelection(idx)"/>
-      }
-    </div>
-
-    <!--  Choices  -->
-    <div class="buttons-group flex overflow-hidden gap-4 mb-6">
-      @for (choice of exerciseData().choices; track choice; let idx = $index) {
-          <p-button
-            class="flex-grow-1 flex flex-column justify-content-center"
-            [styleClass]=
-              "isDone() ? (isCorrectAnswer() ? 'btn-correct' : 'btn-incorrect')
-               :
-               chosenWords().includes(choice) ? 'btn-selected' : '' "
-            id="{{choice}}"
-            label="{{choice}}"
-            [raised]="true"
-            severity="secondary"
-            (onClick)="toggleWordSelection(idx)"/>
-      }
-    </div>
-
-    <!--  Submit button  -->
-    <div class="buttons-group write-sentence-submit-btn flex justify-content-center">
-      @if (!isDone()) {
-        <p-button
-          id="reorderSentenceSubmitBtn"
-          label="Submit"
-          severity="primary"
-          (onClick)="setExerciseResult(vrf.verifyAnswer(chosenWords().join(' '), exerciseData))"/>
-      }
-    </div>
-
-    @if (isDone()) {
-      <div class="translation-wrapper flex flex-column text-center justify-content-center">
-        <p><b>Answer:</b> {{exerciseData().answer}}</p>
-        <p><b>Translation:</b> {{exerciseData().translation}}</p>
-      </div>
-    }
-  </ng-template>
-
-  <!-- MATCH THE CATEGORY -->
-  <ng-template #matchTheCategory>
-    <div class="match-the-category-wrapper flex justify-content-center flex-row text-center mb-2 gap-4 ">
-      <!-- Category 1 container -->
-      <div class="p-2 w-15rem drop-column" pDroppable (onDrop)="drop(0)">
-        <p class="text-center surface-border border-bottom-1 font-bold">{{categoryMatches().categories[0]}}</p>
-        <ul class="list-none flex flex-column gap-2 p-0 m-0">
-          <li
-            *ngFor="let word of categoryMatches().cat1"
-            class="p-2 border-round shadow-1"
-            pDraggable
-            (onDragStart)="dragStart(word)"
-            (onDragEnd)="dragEnd()">
-            {{word}}
-          </li>
-        </ul>
-      </div>
-
-      <!-- Word Bank -->
-      <div class="p-2 border-3 surface-border border-round h-auto w-15rem">
-        <ul class="list-none flex flex-column gap-2 p-0 m-0">
-          <li
-            *ngFor="let word of categoryMatches().wordBank"
-            class="p-2 border-round shadow-1"
-            pDraggable
-            (onDragStart)="dragStart(word)"
-            (onDragEnd)="dragEnd()">
-            {{word}}
-          </li>
-        </ul>
-      </div>
-
-      <!-- Category 2 container -->
-      <div class="p-2 w-15rem drop-column" pDroppable (onDrop)="drop(1)">
-        <p class="text-center surface-border border-bottom-1 font-bold">{{categoryMatches().categories[1]}}</p>
-        <ul class="list-none flex flex-column gap-2 p-0 m-0">
-          <li
-            *ngFor="let word of categoryMatches().cat2"
-            class="p-2 border-round shadow-1"
-            pDraggable
-            (onDragStart)="dragStart(word)"
-            (onDragEnd)="dragEnd()">
-            {{word}}
-          </li>
-        </ul>
-      </div>
-    </div>
-
-    <!--  Submit button  -->
-    <div class="buttons-group write-sentence-submit-btn flex justify-content-center">
-      @if (!isDone()) {
-        <p-button
-          id="matchTheCategorySubmitBtn"
-          label="Submit"
-          severity="primary"
-          [disabled]="(categoryMatches().wordBank.length !== 0)"
-          (onClick)="setExerciseResult(vrf.verifyCategories(categoryMatches, exerciseData))"/>
-      }
-    </div>
-
-  </ng-template>
-
-  <!-- RESULTS SCREEN -->
-  <ng-template #resultsScreen>
-    <div class="results-wrapper text-center">
-      <p>Correct answers:</p>
-      <p>{{counters().correctAnswers}} out of {{counters().totalExercises}}</p>
-      <p>Experience points earned:</p>
-      <p>50 XP</p>
-
-      <!-- Returns the user to the home page -->
-      <div class="buttons-group flex justify-content-center mt-4">
-        <a routerLink="../home">
-          <div class="finish-btn-wrapper">
-            <p-button id="home-btn" label="Finish" severity="primary"/>
-          </div>
-        </a>
-      </div>
-    </div>
-  </ng-template>
-<!-- CONTENT -->
 <div class="wrapper w-full w-10">
   <!--    Current lesson  -->
     <!--  Heading  -->
@@ -341,14 +7,14 @@
       </p>
     </div>
 
-    <!--  Exercise Template  -->
-    <ng-template [ngTemplateOutlet]="getTemplate()"></ng-template>
+    <!--  Exercise Container  -->
+    <ng-container *ngComponentOutlet="currentExercise"></ng-container>
 
     <!--  Next Button  -->
     <div class="buttons-group p-fluid grid-12 gap-2 mb-3">
       <div class="next-btn-wrapper flex justify-content-end">
         @if (isDone() && !isLessonOver()) {
-          <p-button id="next-btn" label="Next" severity="primary" autofocus (onClick)="setUpNextExercise()"/>
+          <p-button id="next-btn" label="Next" severity="primary" autofocus (onClick)="lrn.setUpNextExercise()"/>
         }
       </div>
     </div>
