Updated lesson generator service and related functions to match API-based data retrieval logic Moved lesson language information from exercise object to a separate signal

--- a/Phase_B/gptalk-frontend/src/app/pages/learn/fill-in-the-blank/fill-in-the-blank.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/fill-in-the-blank/fill-in-the-blank.component.html
@@ -1,4 +1,4 @@
-  <div class="sentence-wrapper flex justify-content-start gap-3 mb-2">
+  <div class="sentence-wrapper flex justify-content-start gap-3 mb-2" [dir]="utilHtml.langDirection(lessonLanguage)">
     <p>{{exerciseData().question}} </p>
     <input
       #inputField
