--- a/Phase_B/gptalk-frontend/src/app/pages/learn/translate-the-sentence/translate-the-sentence.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/translate-the-sentence/translate-the-sentence.component.html
@@ -3,7 +3,7 @@
     </div>
     <div class="flex justify-content-center mb-2">
       <textarea
-        [dir]="utilHtml.langDirection(exerciseData)"
+        [dir]="utilHtml.langDirection(lessonLanguage)"
         autofocus
         class="sentence-input-area flex-grow-1 flex-wrap"
         [readOnly]="isDone()"
